// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`u-carousel.vue Demo-fade 1`] = `
<div>
  <div class="root">
    <div class="body" name="realpostion">
      <transition-stub name="fade">
        <div animation="fade" class="root" style>
          <div class="body">
            <img src="../../../assets/images/1.jpg">
            <span vusion-slot-name="item"> </span>
          </div>
        </div>
      </transition-stub>
      <transition-stub name="fade">
        <div animation="fade" class="root" style="display: none;">
          <div class="body">
            <img src="../../../assets/images/2.jpg">
            <span vusion-slot-name="item"> </span>
          </div>
        </div>
      </transition-stub>
      <transition-stub name="fade">
        <div animation="fade" class="root" style="display: none;">
          <div class="body">
            <img src="../../../assets/images/3.jpg">
            <span vusion-slot-name="item"> </span>
          </div>
        </div>
      </transition-stub>
      <transition-stub name="fade">
        <div animation="fade" class="root" style="display: none;">
          <div class="body">
            <img src="../../../assets/images/4.jpg">
            <span vusion-slot-name="item"> </span>
          </div>
        </div>
      </transition-stub>
      <transition-stub name="fade">
        <div animation="fade" class="root" style="display: none;">
          <div class="body">
            <img src="../../../assets/images/5.jpg">
            <span vusion-slot-name="item"> </span>
          </div>
        </div>
      </transition-stub>
    </div>
    <nav class="nav">
      <a class="nav-item" selected="selected"></a>
      <a class="nav-item"></a>
      <a class="nav-item"></a>
      <a class="nav-item"></a>
      <a class="nav-item"></a>
    </nav>
    <div class="button" findname="realpostion" role="prev" vusion-index="0"></div>
    <div class="button" findname="realpostion" role="next" vusion-index="0"></div>
  </div>
</div>
`;

exports[`u-carousel.vue Demo-基本用法 1`] = `
<div>
  <div class="root" style="width: 100%;">
    <div class="body" name="realpostion">
    </div>
    <nav class="nav"></nav>
    <div class="button" findname="realpostion" role="prev" vusion-index="-1"></div>
    <div class="button" findname="realpostion" role="next" vusion-index="-1"></div>
  </div>
</div>
`;

exports[`u-carousel.vue Demo-基本用法 2`] = `
<div>
  <div class="root">
    <div class="body" name="realpostion">
    </div>
    <nav class="nav"></nav>
    <div class="button" findname="realpostion" role="prev" vusion-index="-1"></div>
    <div class="button" findname="realpostion" role="next" vusion-index="-1"></div>
  </div>
</div>
`;

exports[`u-carousel.vue Demo-基本用法 3`] = `
<div>
  <div class="root">
    <div class="body" name="realpostion">
      <transition-stub name="fade">
        <div animation="fade" class="root" style>
          <div class="body">
            <span vusion-slot-name="item"> </span>
          </div>
        </div>
      </transition-stub>
      <transition-stub name="fade">
        <div animation="fade" class="root" style="display: none;">
          <div class="body">
            <span vusion-slot-name="item"> </span>
          </div>
        </div>
      </transition-stub>
    </div>
    <nav class="nav">
      <a class="nav-item" selected="selected"></a>
      <a class="nav-item"></a>
    </nav>
    <div class="button" findname="realpostion" role="prev" vusion-index="0"></div>
    <div class="button" findname="realpostion" role="next" vusion-index="0"></div>
  </div>
</div>
`;

exports[`u-carousel.vue Demo-基本用法 4`] = `
<div>
  <div class="root">
    <div class="body" name="realpostion">
      <transition-stub name="fade">
        <div animation="fade" class="root" style>
          <div class="body">
            <img src="../../../assets/images/1.jpg">
            <span vusion-slot-name="item"> </span>
          </div>
        </div>
      </transition-stub>
      <transition-stub name="fade">
        <div animation="fade" class="root" style="display: none;">
          <div class="body">
            <img src="../../../assets/images/2.jpg">
            <span vusion-slot-name="item"> </span>
          </div>
        </div>
      </transition-stub>
      <transition-stub name="fade">
        <div animation="fade" class="root" style="display: none;">
          <div class="body">
            <img src="../../../assets/images/3.jpg">
            <span vusion-slot-name="item"> </span>
          </div>
        </div>
      </transition-stub>
      <transition-stub name="fade">
        <div animation="fade" class="root" style="display: none;">
          <div class="body">
            <img src="../../../assets/images/4.jpg">
            <span vusion-slot-name="item"> </span>
          </div>
        </div>
      </transition-stub>
      <transition-stub name="fade">
        <div animation="fade" class="root" style="display: none;">
          <div class="body">
            <img src="../../../assets/images/5.jpg">
            <span vusion-slot-name="item"> </span>
          </div>
        </div>
      </transition-stub>
    </div>
    <nav class="nav">
      <a class="nav-item" selected="selected"></a>
      <a class="nav-item"></a>
      <a class="nav-item"></a>
      <a class="nav-item"></a>
      <a class="nav-item"></a>
    </nav>
    <div class="button" findname="realpostion" role="prev" vusion-index="0"></div>
    <div class="button" findname="realpostion" role="next" vusion-index="0"></div>
  </div>
</div>
`;

exports[`u-carousel.vue Demo-数据源 1`] = `
<div class="root" direction="vertical" type vusion-slot-name="default">
  <div class="root">
    <div class="body" name="realpostion">
      <div class="root" size="small">
        <div class="rotate">
          <span class="lcp-iconv icon">
            <span class="iconwrap">
              <svg aria-hidden="true" class="iconsvg">
                <use xlink:href="#pc-loading" />
              </svg>
            </span>
            <div class="icontext" vusion-slot-name="default">
            </div>
          </span>
        </div>
      </div>
    </div>
    <nav class="nav"></nav>
    <div class="button" findname="realpostion" role="prev" vusion-index="-1"></div>
    <div class="button" findname="realpostion" role="next" vusion-index="-1"></div>
  </div>
  <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
    click reload
  </a>
</div>
`;

exports[`u-carousel.vue Demo-自动播放与循环 1`] = `
<div>
  <div class="root">
    <div class="body" name="realpostion">
      <transition-stub name="fade">
        <div animation="fade" class="root" style>
          <div class="body">
            <img src="../../../assets/images/1.jpg">
            <span vusion-slot-name="item"> </span>
          </div>
        </div>
      </transition-stub>
      <transition-stub name="fade">
        <div animation="fade" class="root" style="display: none;">
          <div class="body">
            <img src="../../../assets/images/2.jpg">
            <span vusion-slot-name="item"> </span>
          </div>
        </div>
      </transition-stub>
      <transition-stub name="fade">
        <div animation="fade" class="root" style="display: none;">
          <div class="body">
            <img src="../../../assets/images/3.jpg">
            <span vusion-slot-name="item"> </span>
          </div>
        </div>
      </transition-stub>
      <transition-stub name="fade">
        <div animation="fade" class="root" style="display: none;">
          <div class="body">
            <img src="../../../assets/images/4.jpg">
            <span vusion-slot-name="item"> </span>
          </div>
        </div>
      </transition-stub>
      <transition-stub name="fade">
        <div animation="fade" class="root" style="display: none;">
          <div class="body">
            <img src="../../../assets/images/5.jpg">
            <span vusion-slot-name="item"> </span>
          </div>
        </div>
      </transition-stub>
    </div>
    <nav class="nav">
      <a class="nav-item" selected="selected"></a>
      <a class="nav-item"></a>
      <a class="nav-item"></a>
      <a class="nav-item"></a>
      <a class="nav-item"></a>
    </nav>
    <div class="button" findname="realpostion" role="prev" vusion-index="0"></div>
    <div class="button" findname="realpostion" role="next" vusion-index="0"></div>
  </div>
</div>
`;

exports[`u-carousel.vue Demo-自动播放与循环 2`] = `
<div>
  <div class="root">
    <div class="body" name="realpostion">
      <transition-stub name="fade">
        <div animation="fade" class="root" style>
          <div class="body">
            <img src="../../../assets/images/1.jpg">
            <span vusion-slot-name="item"> </span>
          </div>
        </div>
      </transition-stub>
      <transition-stub name="fade">
        <div animation="fade" class="root" style="display: none;">
          <div class="body">
            <img src="../../../assets/images/2.jpg">
            <span vusion-slot-name="item"> </span>
          </div>
        </div>
      </transition-stub>
      <transition-stub name="fade">
        <div animation="fade" class="root" style="display: none;">
          <div class="body">
            <img src="../../../assets/images/3.jpg">
            <span vusion-slot-name="item"> </span>
          </div>
        </div>
      </transition-stub>
      <transition-stub name="fade">
        <div animation="fade" class="root" style="display: none;">
          <div class="body">
            <img src="../../../assets/images/4.jpg">
            <span vusion-slot-name="item"> </span>
          </div>
        </div>
      </transition-stub>
      <transition-stub name="fade">
        <div animation="fade" class="root" style="display: none;">
          <div class="body">
            <img src="../../../assets/images/5.jpg">
            <span vusion-slot-name="item"> </span>
          </div>
        </div>
      </transition-stub>
    </div>
    <nav class="nav">
      <a class="nav-item" selected="selected"></a>
      <a class="nav-item"></a>
      <a class="nav-item"></a>
      <a class="nav-item"></a>
      <a class="nav-item"></a>
    </nav>
    <div class="button" findname="realpostion" role="prev" vusion-index="0"></div>
    <div class="button" findname="realpostion" role="next" vusion-index="0"></div>
  </div>
</div>
`;

exports[`u-carousel.vue Demo-自动播放与循环 3`] = `
<div>
  <div class="root">
    <div class="body" name="realpostion">
      <transition-stub name="fade">
        <div animation="fade" class="root" style>
          <div class="body">
            <img src="../../../assets/images/1.jpg">
            <span vusion-slot-name="item"> </span>
          </div>
        </div>
      </transition-stub>
      <transition-stub name="fade">
        <div animation="fade" class="root" style="display: none;">
          <div class="body">
            <img src="../../../assets/images/2.jpg">
            <span vusion-slot-name="item"> </span>
          </div>
        </div>
      </transition-stub>
      <transition-stub name="fade">
        <div animation="fade" class="root" style="display: none;">
          <div class="body">
            <img src="../../../assets/images/3.jpg">
            <span vusion-slot-name="item"> </span>
          </div>
        </div>
      </transition-stub>
      <transition-stub name="fade">
        <div animation="fade" class="root" style="display: none;">
          <div class="body">
            <img src="../../../assets/images/4.jpg">
            <span vusion-slot-name="item"> </span>
          </div>
        </div>
      </transition-stub>
      <transition-stub name="fade">
        <div animation="fade" class="root" style="display: none;">
          <div class="body">
            <img src="../../../assets/images/5.jpg">
            <span vusion-slot-name="item"> </span>
          </div>
        </div>
      </transition-stub>
    </div>
    <nav class="nav">
      <a class="nav-item" selected="selected"></a>
      <a class="nav-item"></a>
      <a class="nav-item"></a>
      <a class="nav-item"></a>
      <a class="nav-item"></a>
    </nav>
    <div class="button" findname="realpostion" role="prev" style="display: none;" vusion-index="0"></div>
    <div class="button" findname="realpostion" role="next" style vusion-index="0"></div>
  </div>
</div>
`;
